--- a/Proeto-Final/projeto-portfolio/estilos/style.css
+++ b/Proeto-Final/projeto-portfolio/estilos/style.css
@@ -96,3 +96,32 @@ main{
 #Social a:hover{
   color: var(--destaque-inverso);
 }
+#Detalhes{
+  grid-column: 2;
+  
+}
+article{
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+article h2{
+  color: var(--destaque);
+  margin-bottom: 10px;
+}
+#Video-Container{
+  position: relative;
+  width: 100%;
+  margin: auto;
+  aspect-ratio: 16/9;
+  
+}
+#Video-Container iframe{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+}
